# ecommerce-mlops-platform

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  docker-compose.app.yml  docker-compose.batch_dev.yml  docker-compose.batch_prod.yml  docker-compose.infra.yml  docker-compose.monitor.yml  loadtest_agent.py  loadtest_recsys.py  pyproject.toml  requirements-test.txt  requirements.txt
.dvc/: config
config/: dev.env  staging.env
dbt_project/: dbt_project.yml
docker/: Dockerfile.agent_api  Dockerfile.airflow  Dockerfile.crawler  Dockerfile.dbt  entrypoint.agent_api.sh
docs/: ROADMAP.md  deploy_aws.md
kb-docs/: post-1000.txt  post-1003.txt  post-1006.txt  post-1009.txt  post-1012.txt  post-1018.txt  post-1021.txt  post-1024.txt  post-1030.txt  post-1033.txt  post-1036.txt  post-1039.txt  post-1042.txt  post-1045.txt  post-1048.txt  post-1051.txt  post-1054.txt  post-1057.txt  post-1060.txt  post-1063.txt  post-1069.txt  post-1072.txt  post-1075.txt  post-1078.txt  post-1081.txt  post-1084.txt  post-1087.txt  post-1090.txt  post-1093.txt  post-1096.txt  post-1099.txt  post-1102.txt  post-1105.txt  post-1135.txt  post-760.txt  post-763.txt  post-772.txt  post-775.txt  post-778.txt  post-781.txt  (+63 more)
monitoring/: prometheus.yml
nginx/: recsys.conf  vllm.conf
results/: agent_cpu_long.html  agent_cpu_u1.html  agent_cpu_u1_v2.html  agent_gpu.html  recsys_cpu.html  recsys_cpu_v2.html
scripts/: crawl_tiki_policies.py  deploy_ec2.sh  extract_policy_links.py  generate_fake_data.py  ssm.sh
(+224 files in other folders)
